--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ numpy==1.23.5
 beautifulsoup4==4.11.2
 selenium==4.7.0
 webdriver-manager==3.8.5
+lightgbm==3.3.5
+scikit-learn==1.2.0
 
 pip install -r requirements.txt
 
