--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ selenium==4.7.0
 webdriver-manager==3.8.5
 lightgbm==3.3.5
 scikit-learn==1.2.0
+xlsxwriter==3.1.2
 
 pip install -r requirements.txt
 
