--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools==65.5.0
 pandas==1.5.3
 numpy==1.23.5
 beautifulsoup4==4.11.2
@@ -6,7 +7,3 @@ webdriver-manager==3.8.5
 lightgbm==3.3.5
 scikit-learn==1.2.0
 xlsxwriter==3.1.2
-
-pip install -r requirements.txt
-
-pip list
