--- a/.github/workflows/run_script_2.yml
+++ b/.github/workflows/run_script_2.yml
@@ -28,9 +28,10 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
+        git config user.name "GitHub Action"
+        git config user.email "action@github.com"
         git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
         git add output/Gathering_Data/Next_Game/games_df_*.csv
         git commit -m "Add next game CSV for $(date +'%Y-%m-%d')" || echo "No changes to commit"
         git push origin HEAD:${{ github.ref_name }}
+
