--- a/.github/workflows/run_script_3.yml
+++ b/.github/workflows/run_script_3.yml
@@ -31,7 +31,7 @@ jobs:
 
       # 4) Run your LightGBM script
       - name: Run LightGBM prediction
-        run: python src/3_03052025_lightgbm.py
+        run: python src/3_ightgbm.py
 
       # 5) Commit & push any new CSVs
       - name: Commit and push prediction outputs
