--- a/.github/workflows/run_script_3.yml
+++ b/.github/workflows/run_script_3.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
@@ -20,8 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Pin numpy to avoid ABI break
+          # Pin numpy to avoid the "dtype size changed" ABI error
           pip install numpy==1.24.4
+          # Then install the rest of your requirements (including scikit-learn & lightgbm)
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
