--- a/.github/workflows/run_script_3.yml
+++ b/.github/workflows/run_script_3.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   predict:
@@ -21,15 +22,18 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Pin numpy to avoid the "dtype size changed" ABI error
+          # pin numpy to a 1.24.x wheel ABI to match sklearn/lightgbm
           pip install numpy==1.24.4
-          # Then install the rest of your requirements (including scikit-learn & lightgbm)
+          # install sklearn and lightgbm wheels built against that numpy
+          pip install scikit-learn==1.2.2 lightgbm==3.3.5
+          # then any other deps you list in requirements.txt
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
 
       - name: Run LightGBM prediction
-        run: python src/3_lightgbm.py
+        run: |
+          python src/3_lightgbm.py
 
       - name: Commit and push prediction outputs
         run: |
