--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,8 +42,6 @@ jobs:
 
     # Single commit for all changes
     - name: Commit all changes
-      env:
-        GITHUB_REF_NAME: ${{ github.ref_name }}
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -56,4 +54,4 @@ jobs:
 
         git commit -m "🔄 Update NBA data and predictions for $(date +'%Y-%m-%d')" \
           || echo "No changes to commit"
-        git push origin HEAD:${GITHUB_REF_NAME}
+        git push origin main
