--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
@@ -46,6 +48,15 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
 
+        # Get the current branch name for pull requests or use the ref for direct pushes
+        if [ "${{ github.event_name }}" == "pull_request" ]; then
+          BRANCH_NAME="${{ github.head_ref }}"
+        else
+          BRANCH_NAME="${{ github.ref_name }}"
+        fi
+
+        echo "Using branch: $BRANCH_NAME"
+
         # Add all generated files
         git add output/Gathering_Data/Whole_Statistic/nba_games_*.csv
         git add output/Gathering_Data/data/2025_standings/*.html
@@ -54,4 +65,6 @@ jobs:
 
         git commit -m "🔄 Update NBA data and predictions for $(date +'%Y-%m-%d')" \
           || echo "No changes to commit"
-        git push origin main
+
+        # Push to the correct branch
+        git push origin HEAD:$BRANCH_NAME
