--- a/.github/workflows/run_script_4.yml
+++ b/.github/workflows/run_script_4.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run Script 4 – Calculate Betting Statistics
         run: |
-          python calc_betting_stats.py \
+          python 4_calculate_betting_statistics.py \
             --pred-dir output/LightGBM/1_2025_Prediction \
             --stat-dir output/Gathering_Data/Whole_Statistic
 
