--- a/.github/workflows/run_script_5.yml
+++ b/.github/workflows/run_script_5.yml
@@ -44,6 +44,7 @@ jobs:
 
           # adjust these paths to match wherever your script writes its CSVs
           git add output/**/*filtered_*.csv || true
+          git add output/**/*home_win_rates_sorted_*.csv || true
 
           git commit -m "🔄 Update filtered Kelly outputs for $(date +'%Y-%m-%d')" \
             || echo "No filtered‐Kelly changes to commit"
