Added more steps to common workflow

--- a/.github/workflows/run_script_4.yml
+++ b/.github/workflows/run_script_4.yml
@@ -1,7 +1,7 @@
 name: 🏀 Run Script 4 – Calculate Betting Statistics
 
-on:
-  workflow_dispatch:
+# on:
+#   workflow_dispatch:
 
 jobs:
   calc-stats:
