--- a/.github/workflows/run_script_5.yml
+++ b/.github/workflows/run_script_5.yml
@@ -1,7 +1,7 @@
 name: 🏀 Run Script 8 – Filtered Kelly Criterion
 
-on:
-  workflow_dispatch:
+# on:
+#   workflow_dispatch:
 
 permissions:
   contents: write
