--- a/.github/workflows/run_script_All.yml
+++ b/.github/workflows/run_script_All.yml
@@ -1,8 +1,8 @@
 name: 🏀 NBA Full Data & Prediction Pipeline
 
-on:
-  pull_request:
-  workflow_dispatch:
+# on:
+#   pull_request:
+#   workflow_dispatch:
 
 permissions:
   contents: write
