--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,6 +42,18 @@ jobs:
     - name: Run Script 3 - LightGBM prediction
       run: python src/3_lightgbm.py
 
+    # Step 4 : Calculate Betting Statistics
+    - name: Run Script 4 – Calculate Betting Statistics
+      run: |
+        python src/4_calculate_betting_statistics.py \
+          --pred-dir output/LightGBM/1_2025_Prediction \
+          --stat-dir output/Gathering_Data/Whole_Statistic
+
+    # Step 5 : Filtered Kelly Criterion
+    - name: Run Script 5 – Filtered Kelly Criterion
+      run: |
+        python src/8_filtered_kelly_criterion_for_best_betting_parameters.py
+
     # Single commit for all changes
     - name: Commit all changes
       run: |
@@ -58,10 +70,14 @@ jobs:
         echo "Using branch: $BRANCH_NAME"
 
         # Add all generated files
-        git add output/Gathering_Data/Whole_Statistic/nba_games_*.csv
-        git add output/Gathering_Data/data/2025_standings/*.html
-        git add output/Gathering_Data/Next_Game/games_df_*.csv
-        git add output/LightGBM/1_2025_Prediction/nba_games_predict_*.csv
+        git add output/Gathering_Data/Whole_Statistic/nba_games_*.csv || true
+        git add output/Gathering_Data/data/2025_standings/*.html || true
+        git add output/Gathering_Data/Next_Game/games_df_*.csv || true
+        git add output/LightGBM/1_2025_Prediction/nba_games_predict_*.csv || true
+        git add output/LightGBM/1_2025_Prediction/combined_nba_predictions_acc_*.csv || true
+        git add output/**/*filtered_*.csv || true
+        git add output/**/*home_win_rates_sorted_*.csv || true
+        git add output/**/*kelly_stakes*.csv || true
 
         git commit -m "🔄 Update NBA data and predictions for $(date +'%Y-%m-%d')" \
           || echo "No changes to commit"
