--- a/.github/workflows/1_get_data_previous_game_day 2026.yml
+++ b/.github/workflows/1_get_data_previous_game_day 2026.yml
@@ -1,67 +1,73 @@
-name: 🏀 Collect Previous Game Data
+name: "🏀 Collect Previous Game Data"
 
 on:
-  workflow_dispatch:        # you can click "Run workflow"
+  workflow_dispatch:      # you can click 'Run workflow'
   schedule:
-    # every day at 06:00 UTC (adjust if you want)
+    # every day at 06:00 UTC
     - cron: "0 6 * * *"
 
 jobs:
   collect_data:
     runs-on: ubuntu-latest
-    timeout-minutes: 20   # hard kill if job hangs
 
     steps:
-    - name: Checkout repository
-    # pulls your code so we can run the scripts
-      uses: actions/checkout@v4
+      # 1. Checkout repo
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
+      # 2. Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        # webdriver-manager sometimes needs explicit install of browsers/driver helpers
-        pip install selenium webdriver-manager
+      # 3. Install Google Chrome (headless browser binary)
+      #
+      # GitHub runners don't ship with Chrome by default.
+      # We install the stable channel manually so Selenium has a browser
+      # to talk to.
+      #
+      - name: Install Google Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget gnupg unzip
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo gpg --dearmor -o /usr/share/keyrings/google-linux-signing-keyring.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-linux-signing-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          google-chrome --version
 
-    - name: Run previous game data script
-      env:
-        DISPLAY: :99
-      run: |
-        echo "🚀 Starting scraper (headless Chrome)..."
-        # optional: fail fast if it runs too long (600 sec = 10 min)
-        timeout 600 python 2026/src/1_get_data_previous_game_day_2026.py || echo "Script exited (possibly timed out)."
+      # 4. Install Python dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    # OPTIONAL: upload whatever CSVs the script generated so you can inspect them
-    # tweak the path to match where your script writes output
-    - name: Upload generated CSVs as artifacts
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: previous_game_day_output
-        path: |
-          2026/output/Gathering_Data/**
-          2026/output/**/*.csv
-          output/**/*.csv
-        if-no-files-found: warn
+      # 5. Run the scraper script (your script 1)
+      #
+      # We don't pass args: script should default to "yesterday" etc.
+      # Make sure inside that script you NOW import the updated utils
+      # (which no longer creates a global driver).
+      #
+      - name: Run previous game data script
+        env:
+          # You can pass API keys or ENV here if script needs them later
+          PYTHONWARNINGS: "ignore"
+        run: |
+          echo "🚀 Starting scraper (headless Chrome)..."
+          python 2026/src/1_get_data_previous_game_day_2026.py
 
-    # graceful cleanup / debug info
-    - name: Post Set up Python
-      if: always()
-      run: |
-        echo "Python version was:"
-        python --version
-        echo "Disk usage:"
-        du -h 2026 | sort -h | tail -40
-
-    - name: Post Checkout repository
-      if: always()
-      run: |
-        echo "Repo HEAD:"
-        git rev-parse HEAD
-        echo "Listing output dir:"
-        ls -R 2026/output || true
+      # 6. Upload generated CSVs so you can download them from the run
+      #
+      # Adjust these globs if your script writes somewhere else,
+      # e.g. output/Gathering_Data/data/2026_scores/*.csv etc.
+      #
+      - name: Upload generated CSVs as artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: previous_game_day_data
+          path: |
+            output/Gathering_Data/**/*.csv
+            output/LightGBM/**/*.csv
+            output/**/*.csv
+          if-no-files-found: warn
