--- a/.github/workflows/2_get_data_next_game_day 2026.yml
+++ b/.github/workflows/2_get_data_next_game_day 2026.yml
@@ -54,5 +54,22 @@ jobs:
           name: next_game_day_data
           path: |
             2026/output/Gathering_Data/Next_Game/**
-            2026/output/Gathering_Data/data/*next*/**
-            2026/output/Gathering_Data/data/*upcoming*/**
+            
+      # 7. Commit + push new/updated files to branch `2026`
+      - name: Commit and push scraped data back to repo
+        run: |
+          echo "Configuring git user"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          echo "Staging updated data folders"
+          git add 2026/output/Gathering_Data/Next_Game
+
+          # if nothing changed, skip commit to avoid failure
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
+            commit_msg="auto-update scraped game data ($(date -u +%Y-%m-%dT%H:%MZ))"
+            git commit -m "$commit_msg"
+            git push origin 2026
+          fi
