--- a/.github/workflows/3_predict_games_hybrid_2026.yml
+++ b/.github/workflows/3_predict_games_hybrid_2026.yml
@@ -59,21 +59,21 @@ jobs:
           path: |
             2026/output/LightGBM/*.csv
 
-      # 7. (Optional) Commit prediction CSVs back into branch 2026.
-      #    Uncomment this block if you want automatic commits in the repo.
-      #
-      # - name: Commit prediction CSVs
-      #   run: |
-      #     echo "Configuring git user"
-      #     git config --global user.email "actions@github.com"
-      #     git config --global user.name "GitHub Actions"
-      #
-      #     echo "Staging prediction outputs"
-      #     git add 2026/output/LightGBM/*.csv
-      #
-      #     if git diff --cached --quiet; then
-      #       echo "No new predictions to commit."
-      #     else
-      #       git commit -m "Add daily predictions [skip ci]"
-      #       git push origin 2026
-      #     fi
+       # 7. (Optional) Commit prediction CSVs back into branch 2026.
+       # Uncomment this block if you want automatic commits in the repo.
+      
+      - name: Commit prediction CSVs
+        run: |
+          echo "Configuring git user"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+      
+          echo "Staging prediction outputs"
+          git add 2026/output/LightGBM/*.csv
+      
+          if git diff --cached --quiet; then
+            echo "No new predictions to commit."
+          else
+            git commit -m "Add daily predictions [skip ci]"
+            git push origin 2026
+          fi
